# beer-frontend

./: Cargo.toml
res/: theme.ron
src/: angle_event.rs  angle_widget.rs  custom_app.rs  data.rs  lib.rs  main.rs  main_app.rs
src/events/: angle.rs  mod.rs  numeric_update.rs  user.rs
src/widgets/: angle.rs  mod.rs  numeric_text_box.rs  pad.rs  position.rs  rotation.rs
