[package]
name = "beer-frontend"
version = "0.1.0"
authors = ["ChatPion <chatpion@gmail.com>"]
edition = "2018"
repository = "https://github.com/ChatPion/beer-frontend"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = "0.3.1-alpha3"
